--- a/src/app/tasks/task-list/task-list.component.html
+++ b/src/app/tasks/task-list/task-list.component.html
@@ -1,17 +1,22 @@
 <mat-card>
-  <mat-card-title>Lista de Tarefas</mat-card-title>
+  <mat-card-title class="title-mat-card-with-action">
+    <div class="title-mat-card">Lista de Tarefas</div>
+    <div class="mat-card-action">
+      <button mat-raised-button [routerLink]="['task']">Adicionar Tarefa</button>
+    </div>
+  </mat-card-title>
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z1 full-width-table">
 
     <!-- Descrição -->
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Descrição </th>
-      <td mat-cell *matCellDef="let task"> {{ task.description }} </td>
+      <th mat-header-cell *matHeaderCellDef> Descrição</th>
+      <td mat-cell *matCellDef="let task"> {{ task.description }}</td>
     </ng-container>
 
     <!-- Status -->
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef> Status</th>
       <td mat-cell *matCellDef="let task">
         {{ task.completed ? 'Concluída' : 'A fazer' }}
       </td>
@@ -19,7 +24,7 @@
 
     <!-- Ação (Checkbox) -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Concluir </th>
+      <th mat-header-cell *matHeaderCellDef> Concluir</th>
       <td mat-cell *matCellDef="let task">
         <mat-checkbox [checked]="task.completed" (change)="toggleCompleted(task)">
         </mat-checkbox>
